--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -6,13 +6,15 @@
 			"bump-patch-for-minor-pre-major": true,
 			"draft": false,
 			"prerelease": false,
-			"initial-version": "0.1.0"
+			"initial-version": "0.1.0",
+			"version": "0.3.0"
 		},
 		"packages/jira": {
 			"release-type": "node",
 			"bump-minor-pre-major": true,
 			"bump-patch-for-minor-pre-major": true,
-			"initial-version": "0.1.0"
+			"initial-version": "0.1.0",
+			"version": "0.2.0"
 		}
 	}
 }
