--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,20 +1,4 @@
 {
-	"packages": {
-		".": {
-			"release-type": "node",
-			"bump-minor-pre-major": true,
-			"bump-patch-for-minor-pre-major": true,
-			"draft": false,
-			"prerelease": false,
-			"initial-version": "0.1.0",
-			"version": "0.3.0"
-		},
-		"packages/jira": {
-			"release-type": "node",
-			"bump-minor-pre-major": true,
-			"bump-patch-for-minor-pre-major": true,
-			"initial-version": "0.1.0",
-			"version": "0.2.0"
-		}
-	}
+	".": "0.3.0",
+	"packages/jira": "0.2.0"
 }
