chore: make @mcp-devtools/jira package publicly publishable

--- a/packages/jira/package.json
+++ b/packages/jira/package.json
@@ -2,7 +2,7 @@
 	"name": "@mcp-devtools/jira",
 	"version": "0.2.0",
 	"description": "Talk to Jira - MCP Server",
-	"private": true,
+	"private": false,
 	"type": "module",
 	"bin": {
 		"mcp-jira": "./build/index.js"
