--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,10 +19,7 @@ jobs:
         uses: pnpm/action-setup@v4
         with:
           version: 10
-          run_install: false
-
-      - name: Install dependencies
-        run: pnpm install
+          run_install: true
 
       - name: Build packages
         run: pnpm build
