--- a/packages/jira/package.json
+++ b/packages/jira/package.json
@@ -3,13 +3,10 @@
 	"version": "0.2.1",
 	"description": "Talk to Jira - MCP Server",
 	"private": false,
-	"type": "module",
 	"bin": {
 		"mcp-jira": "./build/index.js"
 	},
-	"files": [
-		"build"
-	],
+	"files": ["build"],
 	"scripts": {
 		"build": "tsc && node -e \"fs.chmodSync('build/index.js', '755')\"",
 		"prepare": "pnpm run build",
