chore: enable esModuleInterop in base TypeScript configuration

--- a/core/typescript-config/tsconfig.base.json
+++ b/core/typescript-config/tsconfig.base.json
@@ -5,7 +5,8 @@
     "moduleResolution": "Node",
     "strict": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true
   },
   "exclude": ["node_modules", "**/node_modules", "**/build", "**/dist"]
 } 
