--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"scripts": {
 		"build": "pnpm -r build",
 		"dev": "pnpm -r watch",
-		"inspector": "pnpm inspector"
+		"inspector": "pnpm inspector",
+		"postinstall": "pnpm -r build"
 	},
 	"devDependencies": {
 		"@types/node": "^22.13.9",
