--- a/packages/jira/package.json
+++ b/packages/jira/package.json
@@ -6,25 +6,31 @@
 	"bin": {
 		"mcp-jira": "./build/index.js"
 	},
-	"files": [
-		"build"
-	],
+	"files": ["build"],
+	"type": "module",
 	"scripts": {
-		"build": "tsc && node -e \"fs.chmodSync('build/index.js', '755')\"",
+		"build:tsc": "rollup -c",
+		"build:bundle": "pnpm run build:tsc",
+		"build": "pnpm run build:tsc && npm run build:bundle && chmod +x dist/index.js",
 		"prepare": "pnpm run build",
 		"watch": "tsc --watch",
-		"inspector": "npx @modelcontextprotocol/inspector build/index.js"
+		"inspector": "npx @modelcontextprotocol/inspector dist/index.js"
 	},
 	"dependencies": {
-		"@modelcontextprotocol/sdk": "1.6.1",
 		"@mcp-devtools/http-client": "workspace:*",
+		"@modelcontextprotocol/sdk": "1.6.1",
 		"qs": "^6.12.0",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
+		"@mcp-devtools/typescript-config": "workspace:*",
+		"@rollup/plugin-commonjs": "^28.0.3",
+		"@rollup/plugin-json": "^6.1.0",
+		"@rollup/plugin-node-resolve": "^16.0.0",
 		"@types/node": "^22.13.9",
 		"@types/qs": "^6.9.14",
-		"@mcp-devtools/typescript-config": "workspace:*",
+		"rollup": "^4.35.0",
+		"rollup-plugin-typescript2": "^0.36.0",
 		"typescript": "^5.8.2"
 	}
 }
