fix: simplify build process and update TypeScript configuration
- Replace Rollup with native TypeScript compilation
- Update package.json scripts to use tsc and shx
- Remove Rollup configuration files
- Update import statements to use .js extensions
- Enhance TypeScript base configuration
- Standardize tsconfig.json across packages

--- a/core/http-client/tsconfig.json
+++ b/core/http-client/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../typescript-config/tsconfig.base.json",
+  "extends": "@mcp-devtools/typescript-config/tsconfig.base.json",
   "compilerOptions": {
     "outDir": "./build",
     "rootDir": "./src",
