--- a/core/typescript-config/tsconfig.base.json
+++ b/core/typescript-config/tsconfig.base.json
@@ -1,12 +1,14 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "CommonJS",
-    "moduleResolution": "Node",
+    "target": "ES2022",
+    "module": "Node16",
+    "moduleResolution": "Node16",
     "strict": true,
+    "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "esModuleInterop": true
+    "resolveJsonModule": true
   },
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "**/node_modules", "**/build", "**/dist"]
 } 
