--- a/packages/jira/tsconfig.json
+++ b/packages/jira/tsconfig.json
@@ -1,8 +1,8 @@
 {
-  "extends": "../../core/typescript-config/tsconfig.base.json",
-  "compilerOptions": {
-    "outDir": "./build",
-    "rootDir": "./src"
-  },
-  "include": ["src/**/*"]
+  "extends": "@mcp-devtools/typescript-config/tsconfig.base.json",
+	"compilerOptions": {
+		"outDir": "./build",
+		"rootDir": "./src"
+	},
+	"include": ["./**/*.ts"]
 } 
