--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -2,5 +2,6 @@
 	".": "0.3.10",
 	"core/http-client": "0.1.3",
 	"core/typescript-config": "0.1.3",
-	"packages/jira": "0.2.5"
+	"packages/jira": "0.2.5",
+	"packages/linear": "0.1.0"
 }
