--- a/release-please-config.json
+++ b/release-please-config.json
@@ -29,6 +29,13 @@
 			"bump-minor-pre-major": true,
 			"bump-patch-for-minor-pre-major": true,
 			"initial-version": "0.1.0"
+		},
+		"packages/linear": {
+			"changelog-path": "CHANGELOG.md",
+			"release-type": "node",
+			"bump-minor-pre-major": true,
+			"bump-patch-for-minor-pre-major": true,
+			"initial-version": "0.1.0"
 		}
 	},
 	"$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
